# Deep_learnin_serie_temps

./: desktop.ini  main.py  predictions_all_stations.csv  predictions_vs_true.csv  pyproject.toml
data/: fr-en-calendrier-scolaire.csv  schema_gares-gf.csv
data/data-rf-2024/data-rf-2024/: 2024_S1_PROFIL_FER.txt  2024_T3_PROFIL_FER.txt
models_gares/: forecaster_ABLON.pkl  forecaster_ARCUEIL-CACHAN.pkl  forecaster_ARGENTEUIL.pkl  forecaster_AUSTERLITZ.pkl  forecaster_BALARD.pkl  forecaster_BASTILLE.pkl  forecaster_BELLEVILLE.pkl  forecaster_BERCY.pkl  forecaster_BIBLIOTHEQUE_FRANCOIS_MITTERRAND.pkl  forecaster_BOURG-LA-REINE.pkl  forecaster_BRETIGNY.pkl  forecaster_BRUNOY.pkl  forecaster_BRY-SUR-MARNE.pkl  forecaster_CHAMPIGNY.pkl  forecaster_CHATOU-CROISSY.pkl  forecaster_CONCORDE.pkl  forecaster_DAUMESNIL.pkl  forecaster_DOMONT.pkl  forecaster_ETAMPES.pkl  forecaster_GAMBETTA.pkl  forecaster_GARE_DE_L'EST.pkl  forecaster_GARE_DE_LYON.pkl  forecaster_GARE_DU_NORD.pkl  forecaster_GENTILLY.pkl  forecaster_HERBLAY.pkl  forecaster_HOTEL_DE_VILLE.pkl  forecaster_INVALIDES.pkl  forecaster_JAURES.pkl  forecaster_JAVEL.pkl  forecaster_LAPLACE.pkl  forecaster_LUXEMBOURG.pkl  forecaster_MADELEINE.pkl  forecaster_MIROMESNIL.pkl  forecaster_MONTPARNASSE.pkl  forecaster_NATION.pkl  forecaster_NOISIEL.pkl  forecaster_POISSY.pkl  forecaster_PONTOISE.pkl  forecaster_PONT_DE_SEVRES.pkl  forecaster_PORTE_DAUPHINE.pkl  (+12 more)
src/: calendarplot.py  data_concated.py  feature_engineering.py  importation_data.py  plot_time_series.py  traitement_nbvald.py
